openshift-config/adminer-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: kompose convert --provider openshift -o openshift-config/
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: adminer
    app: facebook-django-mock
  name: adminer
spec:
  replicas: 1
  selector:
    io.kompose.service: adminer
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: adminer
    spec:
      containers:
      - image: ' '
        name: adminer
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - adminer
      from:
        kind: ImageStreamTag
        name: adminer:latest
    type: ImageChange
status: {}
