openshift-config/db-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    app: facebook-django-mock
    kompose.cmd: kompose convert --provider openshift -o openshift-config/ -v
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    io.kompose.service: db
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: ' '
        name: db
        resources: {}
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - db
      from:
        kind: ImageStreamTag
        name: db:latest
    type: ImageChange
status: {}
