openshift-config/gunicorn-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --provider openshift --deployment-config
      --out openshift-config/ --replicas 0 -v
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: gunicorn
  name: gunicorn
spec:
  replicas: 0
  selector:
    io.kompose.service: gunicorn
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: gunicorn
    spec:
      containers:
      - image: ' '
        name: gunicorn
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /app/static
          name: static
      restartPolicy: Always
      volumes:
      - name: static
        persistentVolumeClaim:
          claimName: static
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - gunicorn
      from:
        kind: ImageStreamTag
        name: gunicorn:3.6-slim
    type: ImageChange
status: {}
