openshift-config/nginx-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --provider openshift --deployment-config
      --out openshift-config/ --replicas 0 -v
    kompose.service.expose: "true"
    kompose.version: 1.17.0 (a74acad)
    kompose.volume.size: 1Gi
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 0
  selector:
    io.kompose.service: nginx
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: ' '
        name: nginx
        ports:
        - containerPort: 8081
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/nginx/html/static
          name: static
      restartPolicy: Always
      volumes:
      - name: static
        persistentVolumeClaim:
          claimName: static
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - nginx
      from:
        kind: ImageStreamTag
        name: nginx:latest
    type: ImageChange
status: {}
