openshift-config/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: facebook-django-mock
    kompose.cmd: kompose convert --provider openshift -o openshift-config/ -v
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8080
  selector:
    io.kompose.service: adminer
status:
  loadBalancer: {}
