openshift-config/gunicorn-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --provider openshift --deployment-config
      --out openshift-config/ --replicas 0 -v
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: gunicorn
  name: gunicorn
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: gunicorn
status:
  loadBalancer: {}
