openshift-config/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --provider openshift --deployment-config
      --out openshift-config/ --replicas 0 -v
    kompose.service.expose: "true"
    kompose.version: 1.16.0 (0c01309)
    kompose.volume.size: 1Gi
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
