openshift-config/nginx-route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  host: ""
  port:
    targetPort: 8081
  to:
    kind: Service
    name: nginx
    weight: null
status:
  ingress: null
